# x-log

./: .gitignore  CMakeLists.txt  Config.cmake.in  GRPC.cmake  LICENSE  MACRO_GENERATOR.sh  README.md  example.cpp  test_program.cpp  xlog-config.cmake.in  xlog.cpp  xlog.h  xlog.pc.in  xlog.proto  xlog_grpc.cpp  xlog_grpc.noexport.h  xlog_grpc_util.cpp  xlog_grpc_util.noexport.h  xlog_gtest.cpp  xlog_gtest_fatal.h  xlog_gtest_format.h  xlog_journal.cpp  xlog_journal.noexport.h  xlog_log_internal.noexport.h  xlog_macro_gen.cpp  xlog_manager.cpp  xlog_test_backend.cpp  xlog_test_backend.internal.h  xlog_test_utils.cpp  xlog_test_utils.h
